Fix issue of overlapping Connect With Me button

--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -59,7 +59,7 @@ body, html {
 .about-intro {
   color: white;
   height: 200px;
-  padding: 150px;
+  padding-top: 70px;
   text-shadow: 2px 2px 2px black;
 }
 
@@ -68,7 +68,7 @@ body, html {
   margin: 10px;
 }
 
-.about-photo-container {
+.profile-photo-container {
   padding: 10px;
   margin: 10px;
 }
